update App.scss -- fix gap between tweet user details and tweet content

--- a/src/App.scss
+++ b/src/App.scss
@@ -680,7 +680,7 @@ button {
         text-align: center;
         color: #8b98a5;
         width: 100%;
-        margin-bottom: 2px;
+        margin-bottom: -2px;
 
         .dets-one,
         .dets-two {
@@ -817,6 +817,7 @@ button {
       justify-content: space-between;
       align-items: flex-start;
       gap: 0.2rem;
+      margin-bottom: -2px;
 
       .user {
         display: flex;
